# murkl

./: .dockerignore  .github-test  .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  STATUS.md  package-lock.json  package.json  start.sh  test-cu.ts  test-e2e.ts  test-full.ts  test-onchain.ts
circuits/: circle.rs  hash.rs  m31.rs  merkle.rs  mod.rs  poseidon.rs  poseidon_constants.txt  prover.rs  stark_circuit.rs
cli/: Cargo.toml  main.rs
cli/src/: main.rs  prover.rs  types.rs
crates/murkl-prover/: Cargo.toml
crates/murkl-prover/benches/: m31_bench.rs  merkle_bench.rs
crates/murkl-prover/src/: air.rs  circle.rs  fri.rs  hash.rs  lib.rs  m31.rs  merkle.rs  prover.rs  qm31.rs  types.rs  verifier.rs
crates/murkl-prover/tests/: circle_tests.rs  integration_tests.rs  m31_tests.rs  merkle_tests.rs
docs/: DEMO_SCRIPT.md  INTEGRATION.md  STARK_SDK_PLAN.md  integration-proposals.md
memory/: 2026-02-04.md
programs/: Cargo.toml
programs/example-integration/: Cargo.toml
programs/example-integration/src/: lib.rs
programs/murkl/: Cargo.toml
programs/murkl/src/: lib.rs  verifier.rs
programs/stark-verifier/: Cargo.toml
programs/stark-verifier/src/: fri.rs  lib.rs  lib.rs.bak  m31.rs
relayer/: .env.example  Dockerfile  auth.db  batch-claim.ts  fly.toml  package-lock.json  package.json  test-channel.ts  test-e2e.ts
relayer/src/: auth.ts  index.ts  vouchers.ts
scripts/: check-deposit.ts  close-buffer.ts  deposit-with-commitment.ts  deposit-wsol.ts  deposit.ts  e2e-claim-test.ts  e2e-full-test.ts  e2e-new.ts  e2e-recipient-binding-surfpool.sh  e2e-recipient-binding.ts  e2e-relayer-test.ts  e2e-test.ts  e2e-vanity.ts  fresh-e2e.ts  get-deposits.ts  get-merkle-root.ts  init-and-pool.ts  init-devnet.ts  init-pool.ts  init-simple.ts  init-test-pool.ts  package-lock.json  package.json  real-e2e.ts  setup-pool.ts  setup-vanity-wsol.ts  setup-wsol-pool.ts  test-claim-relayer.ts  test-claim.ts  test-commitment.ts  test-deposit.ts  test-e2e.ts  test-full-claim.ts  test-upload.ts  test-verify.ts  verify-commitment-bug.ts  verify-e2e.ts
sdk/: README.md  package.json
sdk/src/: buffer.ts  client.ts  constants.ts  crypto.ts  index.ts  proof.ts  types.ts  verifier.ts
test-ledger/: genesis.tar.bz2  snapshot-101-B8pB8jDeKKs9Y1C8eQbkQzqF4mgMZnvT436vtHmoZRyE.tar.zst
test-ledger/accounts/run/: 22.3  61.2
test-ledger/accounts/snapshot/101/: 0.4  101.0  92.1
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  000030.sst  000031.sst  000032.sst  000033.sst  000034.sst  000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  LOG.old.1770136674770517  LOG.old.1770136720398872  MANIFEST-000045
test-ledger/snapshots/101/: 101  status_cache
tests/: e2e-full.ts  e2e.ts  murkl.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: .env.example  DESIGN.md  VERCEL.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: AmountInput.css  AmountInput.test.ts  AmountInput.tsx  AmountPresets.css  AmountPresets.tsx  BalanceDisplay.css  BalanceDisplay.tsx  Button.css  Button.tsx  ClaimLanding.tsx  ClaimTab.tsx  ClaimTabNew.css  ClaimTabNew.tsx  Confetti.css  Confetti.tsx  ConfirmationSummary.css  ConfirmationSummary.tsx  DepositCard.css  DepositCard.tsx  EmptyState.css  EmptyState.tsx  ErrorBoundary.css  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorState.css  ErrorState.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  HowItWorks.css  HowItWorks.tsx  InlineBalancePill.css  InlineBalancePill.tsx  ManualClaimSection.tsx  NetworkStatus.css  NetworkStatus.test.tsx  NetworkStatus.tsx  NotificationBadge.css  NotificationBadge.tsx  (+33 more)
web/src/hooks/: useClaimFlow.ts  useDeposits.ts  usePoolInfo.ts  useRecentSends.test.ts  useRecentSends.ts  useRegisterDeposit.ts  useTokenBalance.ts
web/src/lib/: auth-client.ts  constants.ts  deposit.ts  format.test.ts  format.ts  identity.ts  timeAgo.test.ts  timeAgo.ts  validation.test.ts  validation.ts
web/src/providers/: WalletProvider.tsx
web/src/styles/: baseline.css
web/src/test/: setup.ts
web/src/wasm/: .gitignore  murkl_wasm.d.ts  murkl_wasm.js  murkl_wasm_bg.wasm  murkl_wasm_bg.wasm.d.ts  package.json
