[package]
name = "murkl"
version = "0.1.0"
edition = "2021"
description = "Anonymous social transfers on Solana via Circle STARKs (M31)"
license = "MIT"
repository = "https://github.com/exidz/murkl"

[lib]
path = "circuits/mod.rs"

[[bin]]
name = "murkl-cli"
path = "cli/main.rs"

[dependencies]
# STWO prover framework (Circle STARKs)
stwo = { git = "https://github.com/starkware-libs/stwo.git", features = ["std"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", features = ["std", "prover"] }

# Utilities
itertools = "0.12"
num-traits = "0.2"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"

[features]
default = ["std"]
std = []
solana = []  # For Solana-compatible builds (no_std, etc.)

[profile.release]
opt-level = 3
lto = true

[workspace]
members = [
    ".",
    # Note: programs/murkl has its own workspace due to dependency conflicts with STWO
]
