[package]
name = "murkl-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Murkl anonymous social transfers"

[[bin]]
name = "murkl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"
