[package]
name = "murkl-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM prover for Murkl"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core prover (use std for WASM with JS bindings)
murkl-prover = { path = "../crates/murkl-prover" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Crypto (for backwards-compatible hashing)
sha3 = "0.10"

[profile.release]
opt-level = "s"
lto = true
