[package]
name = "murkl-prover"
version = "0.1.0"
edition = "2021"
authors = ["Murkl Team"]
description = "Circle STARK prover for Murkl privacy protocol"
license = "MIT"
rust-version = "1.79"

[features]
default = ["std"]
std = []
simd = []  # Enable SIMD optimizations
wasm = ["getrandom/js"]

[dependencies]
# Core dependencies
sha3 = { version = "0.10", default-features = false }
bytemuck = { version = "1.14", features = ["derive"] }
rand = { version = "0.8", default-features = false }
getrandom = { version = "0.2", optional = true }
cfg-if = "1.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# For serde support
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.4"

[[bench]]
name = "m31_bench"
harness = false

[[bench]]
name = "merkle_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
