[package]
name = "example-integration"
version = "0.1.0"
description = "Example program integrating Murkl verifier via CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_integration"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"
murkl-program = { path = "../murkl", features = ["cpi"] }
