[package]
name = "murkl-program"
version = "0.1.0"
description = "Murkl - Anonymous Social Transfers on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "murkl_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }
anchor-spl = "0.30"
# Using Solana's built-in keccak256 syscall for Merkle verification
