[package]
name = "stark-verifier"
version = "0.1.0"
description = "Standalone Circle STARK verifier for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stark_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30"

